# KOIN_BATCH

./: .env.example  .gitignore  README.md  image_scaling.py  pyproject.toml  requirements.txt  run.sh  scrapy.cfg  venv.sh
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-stage.yml
conf/: config.example.py
crawling/: .gitignore  config.example.py  dcinside_gallery.py  get_holiday.py  koreatech_calendar.py  koreatech_closed_lecture.py  koreatech_dining.py  koreatech_lecture.py  koreatech_notice.py  mysql_connect.py  search_migration.py  slack_notice.py
crawling/city_bus/: city_bus_timetable.py  config.example.py
crawling/graduation_credit_calculator/: culture_hrd_msc.py  major_subject.py  standard_graduation_requirments.py
crawling/koreatech_article/: article.py  config.example.py  convert_content.py  delete_article.py  login.py  login_v2.py  run.sh  slack_notice.py  table.py  timer.py
crawling/koreatech_bus/: cheonan_commuting.yaml  cheonan_shuttle.yaml  cheongju_commuting.yaml  cheongju_shuttle.yaml  config.example.properties  daejeon_commuting.yaml  go.mod  go.sum  main.go  sejong_commuting.yaml  seoul_commuting.yaml
crawling/koreatech_portal/: config.example.py  dining.py  login.py  login_v2.py
crawling/koreatech_portal_login/: config.example.py  gmail_verification.py  portal_login.py
data_cleaning/: deleted_data_cleaning.py
docs/: README.md
image_scaling/: image_scaling.py  image_scaling.sh  s3.example.config  s3_config.example.py
legacy/crawling/: .gitignore  get_holiday.py  search_migration.py  slack_notice.py
(+12 files in other folders)
