[tool.poetry]
name = "KOIN_BATCH"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.10"
redis = "^5.0.8"
pymysql = "^1.1.1"
pymongo = "^4.8.0"
pytz = "^2024.1"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
